--- a/amgreat.css
+++ b/amgreat.css
@@ -129,7 +129,8 @@ float: left
 }
 .header-tab
 {
-	margin-bottom: 180px;
+	margin-bottom: 200px;
+	mamargin-top: 30px;
 }
 .header-title h1
 {
@@ -254,6 +255,7 @@ border-radius: 20px;
 .product
 {
 	margin-bottom: 50px; 
+	margin-top: 100px;
 }
 .product-info h1
 {
@@ -404,6 +406,7 @@ border-radius: 20px;
 .product-1
 {
 	margin-bottom: 80px;
+	margin-top: 30px;
 }
 .product-1-img img
 {
