--- a/amgreat.css
+++ b/amgreat.css
@@ -126,6 +126,7 @@ float: left
 {
 	background-image:url("1x/amgreat_slider6-01.png");
 	background-size: cover;
+	margin-top: 60px;
 }
 .header-tab
 {
